# byte-bandits-mcp-server

./: .env.example  .env.test  README.md  example_unified_usage.py  main.py  mcp.md  pyproject.toml  request_logger.py  test_connectivity.py  test_server.py  test_therapy_gemini.py  test_web_form.py  therapy_tools_curl_commands.md  web_server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docker/: compose.redis.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CODING_STANDARDS.md  COMMAND_DAG.md  CONTRIBUTING.md  DECISIONS.md  DEVELOPMENT.md  PRD.md  REQUIREMENTS.md  TASK.md  TESTING_STRATEGY.md
emotion_therapy/: __init__.py  conversation.py  llm_handler.py  llm_manager.py  llm_stub.py  models.py  responses.py  session_store.py  tools.py  validator.py  wheel.py
scripts/: extract_todos.py  run_server.sh  setup.sh  test.sh  validate_mcp_app.py
templates/: form.html  token_error.html  token_form.html  token_success.html
tests/: conftest.py  test_conversation_manager.py  test_llm_stub.py  test_mcp_end_to_end.py  test_mcp_server.py  test_session_store.py  test_therapy_integration_stub.py  test_tools_smoke.py  test_validator.py  test_validator_wheel_integration.py  test_wheel.py  test_wheel_extra.py
utils/: redis.py
